fix look and feel of main page on mobile devices (#88)

--- a/application/frontend/src/pages/Search/search.scss
+++ b/application/frontend/src/pages/Search/search.scss
@@ -1,3 +1,6 @@
+body{
+  background-color: #242e4c;
+}
 .search-page {
   background-color: #242e4c;
   display: flex;
@@ -21,4 +24,10 @@
     margin-bottom: 30px;
     color: #eee;
   }
+}
+.SearchBar {
+  margin: auto;
+}
+.Search{
+  margin: auto;
 }
